Fix spacing issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,15 @@
 @import "src/variables";
 @import "src/functions";
 
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 * {
     box-sizing: border-box;
     font-family: Calibri, serif;
+}
+
+ul, ol {
+    margin-bottom: 0;
 }
 
 body {
